<resources>
    <string name="sn_name">PD-GO-Next</string>
    <string name="push_version">V2.0</string>
    <string name="full_version">V2.0.0.1</string>
    <string name="env">Ver 240428</string>
    <string name="action_settings">设置</string>
    <string name="aToz">abcdefghijklmnopqrstuvwxyz</string>
    <string name="zeroToNine">1234567890</string>
    <string name="title_letter">字母</string>
    <string name="title_symbol">符号</string>
    <string name="title_number">数字</string>
    <string name="exception_invalid_keyboard">无效的键盘类型</string>
    <string name="text_turn_day">切换日间模式</string>
    <string name="text_turn_night">切换夜间模式</string>
    <string name="text_title">标题</string>
    <string name="description">描述</string>
    <string name="app_name">自动腹膜透析系统</string>
    <string name="device_name">PD-GO-Next腹膜透析机</string>
    <string name="company_name">福州东泽医疗器械有限公司</string>
    <string name="btn_back">返回</string>
    <string name="btn_back2">返&#160;&#160;&#160;&#160;回</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm2">确定完成</string>
    <string name="btn_entry_complete">完成输入</string>
    <string name="btn_previous">上一步</string>
    <string name="btn_next">下一步</string>
    <string name="btn_modify_phone">修改手机号</string>
    <string name="btn_sign_in">登录</string>
    <string name="btn_sign_out">退出登录</string>
    <string name="btn_save">保存</string>
    <string name="btn_buzzer_off">关闭蜂鸣器</string>
    <string name="btn_selfcheck">重新自检</string>
    <string name="btn_contact_engineer">联系工程师</string>
    <string name="label_report_zn">自检报告</string>
    <string name="label_report_es">REPORT</string>
    <string name="lab_contact_engineer">全国客服热线：400-8632-262</string>
    <string name="label_system_alarm">报警系统</string>
    <string name="label_system_power">动力系统 ： </string>
    <string name="label_system_balance">平衡系统 ： </string>
    <string name="label_system_temperature_control">温控系统 ： </string>
    <string name="label_module_supply">补液模块</string>
    <string name="label_module_perfusion">灌注模块</string>
    <string name="label_module_perfusion_last">末次灌注模块</string>
    <string name="label_module_drain">引流模块</string>
    <string name="label_module_upper_weight">透析液模块</string>
    <string name="label_module_lower_weight">废液模块</string>
    <string name="label_module_temperature_heating">加热模块</string>
    <string name="label_module_temperature_control">控制模块</string>
    <string name="label_server_address">通信地址:</string>
    <string name="label_sn">请设置SN:</string>
    <string name="input_tips">请输入</string>
    <string name="input_sn_tips">请输入SN参数</string>
    <string name="switch_text_on">&#160;&#160;是</string>
    <string name="switch_text_off">否&#160;&#160;</string>
    <string name="switch_text_on2">&#160;&#160;开</string>
    <string name="switch_text_off2">关&#160;&#160;</string>
    <string name="ccpd_mode">CCPD</string>
    <string name="version">build: Pro240302</string>
    <string name="error_temp_serial_not_open">温控板串口未打开</string>
    <string name="error_temp_serial_communication_fault">温控板通信故障</string>
    <string name="error_main_serial_not_open">主板串口未打开</string>
    <string name="error_main_serial_communication_fault">主板通信故障</string>
    <string name="connecting_control_panel">正在连接控制板...</string>
    <string name="connecting_temperature_control_panel">正在连接温控板...</string>
    <string name="self_checking">自检中...</string>
    <string name="error_valve_perfusion">灌注阀故障</string>
    <string name="error_valve_drain">引流阀故障</string>
    <string name="error_valve_supply">补液阀故障</string>
    <string name="error_valve_last">最后灌注阀故障</string>
    <string name="error_temper_control_bus">温控通信故障</string>
    <string name="error_temper_control_self">温控板自检未通过</string>
    <string name="error_upper_weight">上位秤自检未通过</string>
    <string name="error_lower_weight">下位秤自检未通过</string>
    <string name="unit_degree_Celsius">℃</string>
    <string name="unit_ml">ml</string>
    <string name="unit_g">g</string>
    <string name="unit_kg">kg</string>
    <string name="unit_min">min</string>
    <string name="unit_second">s</string>
    <string name="unit_mmHg">mmHg</string>
    <string name="unit_percentage">%</string>
    <string name="unit_mmol_l">mmol/L</string>
    <string name="unit_number_of_times">次</string>
    <string name="input_title_temper_t1">T1最大温差</string>
    <string name="input_title_temper_t2">T2加热目标温度值</string>
    <string name="input_title_temper_t3">T3温控上下回差</string>
    <string name="input_title_temper_t4">T4报警温度</string>
    <string name="input_title_temper_t5">T5加热板温度上限</string>
    <string name="input_title_temper_t6">T6加热板调低值</string>
    <string name="input_title_temper_t7">T7目标温度差</string>
    <string name="input_title_temper_tae">TaE温度校正值</string>
    <string name="input_title_temper_tbe">TbE温度校正值</string>
    <string name="input_title_temper_tce">TcE温度校正值</string>
    <string name="input_title_phone_number">请输入手机号</string>
    <string name="input_title_verification_number">请输入手机验证码</string>
    <string name="btn_title_send_verification_number">发送验证码</string>
    <string name="software_name">自动腹膜透析设备医疗程序</string>
    <string name="software_copyright_owner">福州东泽医疗器械有限公司</string>
    <string name="software_model_specifications">PD-G0-NEXT</string>
    <string name="software_release_version">V1.2</string>
    <string name="software_full_version">V1.2.1.0</string>
    <string name="software_release_date">2022年11月08日</string>
    <string name="software_release_version_2">软件发布版本</string>
    <string name="about_content">
            软&#160;&#160;件&#160;&#160;名&#160;&#160;称： 自动腹膜透析设备医疗程序
            \n著&#160;&#160;作&#160;&#160;权&#160;&#160;人： 福州东泽医疗器械有限公司
            \n软件型号规格： PD-G0-NEXT
            \n软件发布版本： V1.2
            \n软件完整版本： V1.2.1.0
            \n软件发布日期： 2022年11月08日</string>
    <string name="tip_parameter_interpretation">
              &#160;&#160;&#160;&#160;T1： 最大温差，Ta和Tb可接受最大温差，超过该温差T1温控板自检不通过；
            \n&#160;&#160;&#160;&#160;T2： 加热温度目标值；
            \n&#160;&#160;&#160;&#160;T3： 温控上下回差，腹透液袋表面温度低于（T2-T3）即启动加热，腹透液袋表面温度高于（T2+T3）即停止加热，但不报警；
            \n&#160;&#160;&#160;&#160;T4： 报警温度，腹透液袋表面温度上限，超过此温度T4即报警和停止治疗；
            \n&#160;&#160;&#160;&#160;T5： 加热板温度上限，超过此温度T5即停止加热，但不报警；
            \n&#160;&#160;&#160;&#160;T6： 加热板调低值，加热温度Td上升到靠近目标温度T2的接近温度差值T6；
            \n&#160;&#160;&#160;&#160;T7： 目标温度差，动态调低加热板温度上限T5=T2+T7，降低加热板热量；
            \n&#160;&#160;&#160;&#160;TaE： Ta的温度校正值；
            \n&#160;&#160;&#160;&#160;TbE： Tb的温度校正值；
            \n&#160;&#160;&#160;&#160;TcE： Tc的温度校正值。
    </string>
    <string name="item_temperature_control_parameter_t1">T1 ： 最大温差，Ta和Tb可接受最大温差，超过该温差T1温控板自检不通过；</string>
    <string name="item_temperature_control_parameter_t2">T2 ： 加热温度目标值；</string>
    <string name="item_temperature_control_parameter_t3">T3 ： 温控上下回差，腹透液袋表面温度低于（T2-T3）即启动加热，腹透液袋表面温度高于（T2+T3）即停止加热，但不报警；</string>
    <string name="item_temperature_control_parameter_t4">T4 ： 报警温度，腹透液袋表面温度上限，超过此温度T4即报警和停止治疗；</string>
    <string name="item_temperature_control_parameter_t5">T5 ： 加热板温度上限，超过此温度T5即停止加热，但不报警；</string>
    <string name="item_temperature_control_parameter_t6">T6 ： 加热板调低值，加热温度Td上升到靠近目标温度T2的接近温度差值T6；</string>
    <string name="item_temperature_control_parameter_t7">T7 ： 目标温度差，动态调低加热板温度上限T5=T2+T7，降低加热板热量；</string>
    <string name="item_temperature_control_parameter_tae">TaE ： Ta的温度校正值；</string>
    <string name="item_temperature_control_parameter_tbe">TbE ： Tb的温度校正值；</string>
    <string name="item_temperature_control_parameter_tce">TcE ： Tc的温度校正值。</string>
    <string name="input_title_manual_input"><u>手动输入</u></string>
    <string name="input_title_prescription_item_1">腹透液总量：</string>
    <string name="input_title_prescription_item_2">每周期灌注量：</string>
    <string name="input_title_prescription_item_3">循环周期数：</string>
    <string name="input_title_prescription_item_4">留腹时间：</string>
    <string name="input_title_prescription_item_5">末次留腹量：</string>
    <string name="input_title_prescription_item_6">上次留腹量：</string>
    <string name="input_title_prescription_item_7">首次灌注量：</string>
    <string name="input_title_prescription_item_8">预估超滤量：</string>
    <string name="input_title_prescription_item_9">末袋补液量：</string>
    <string name="input_title_prescription_item_10">通道1-周期灌注量：</string>
    <string name="input_title_prescription_item_11">通道1：</string>
    <string name="input_title_prescription_item_12">通道2-周期灌注量：</string>
    <string name="input_title_prescription_item_13">通道2：</string>
    <string name="input_title_prescription_item_14">末袋补液量：</string>
    <string name="parameter_setting_drain">引流参数设置</string>
    <string name="parameter_setting_perfusion">灌注参数设置</string>
    <string name="parameter_setting_other">其他</string>
    <string name="input_title_tips_prescription">提示 ： 请反复核对确认与您的透析处方一致</string>
    <string name="input_title_tips_weigh_parameter">
        提示 ： 请取出一个标准砝码，放置在上位秤或者下位秤上面，调整对应的上位秤系数或者下位秤系数。
        上位秤系数或者下位秤系数数值调小，上位秤实时重量或者下位秤实时重量对应变大；
        上位秤系数或者下位秤系数数值调大，上位秤实时重量或者下位秤实时重量对应变小。
        修改数值以后，请点击"保存"按钮。
    </string>
    <string name="input_title_tips_weigh_parameter2">
        &#160;&#160;&#160;&#160;1、在上位称校准值或下位称输入框中填入对应的标准砝码数值加当前秤盘的皮重值；
        \n&#160;&#160;&#160;&#160;2、在上位称或下位称输入框中显示为当前砝码值加皮重值后
    </string>
    <string name="input_title_drain_threshold_zero_cycle">零周期引流阈值</string>
    <string name="input_title_drain_threshold_other_cycle">其他周期引流阈值</string>
    <string name="input_title_drain_manual_emptying">最末引流排空等待</string>
    <string name="input_title_drain_last_delay">末次排空延迟</string>
    <string name="input_title_negpre_drain">负压引流</string>
    <string name="input_title_perfusion_warning_value">灌注警戒值</string>
    <string name="input_title_abdomen_retaining_deduct">留腹扣除</string>
    <string name="input_title_treatment_completion_alarm_wake_up">治疗结束报警唤醒</string>
    <string name="input_title_ultrafiltration_calculation_method">只计算超滤</string>
    <string name="input_title_perfusion_value">灌注量</string>
    <string name="input_title_drain_value">引流量</string>
    <string name="input_title_beyond_value">超滤量</string>
    <string name="input_title_urine_output">尿量</string>
    <string name="input_title_water_intake">饮水量</string>
    <string name="input_title_weight_after_treatment">治疗后体重</string>
    <string name="input_title_diastolic_blood_pressure_after_treatment">治疗后舒张压</string>
    <string name="input_title_systolic_blood_pressure_after_treatment">治疗后收缩压</string>
    <string name="input_title_fasting_blood_glucose">血糖</string>
    <string name="connecting_cannula_step_1">请依次将补液用腹透液与管路连接，确保未使用的补液管处于关闭状态。</string>
    <string name="connecting_cannula_step_2">请将透析液托盘上的腹透液与加热管路连接，确保未使用的管路处于关闭状态。</string>
    <string name="connecting_cannula_step_3">请将专用废液袋与引流端管路连接，确保未连接的管路处于关闭状态，并平方于透出液托盘上。</string>
    <string name="connecting_cannula_step_content2_1">完成后请点击“下一步”</string>
    <string name="connecting_cannula_step_content2_2">完成后请点击“确认”</string>
    <string name="tip_pipeline_connection_skip">
              1、补液袋已按要求悬挂在滴杆上；
            \n2、管匣已插入控制系统；
            \n3、补液袋管路连接，确保未使用的补液管路处于关闭状态；
            \n4、请将透析液托盘上的腹透液与加热管路连接，确保未使用的管路处于关闭状态
            \n5、专用废液袋与引流端管路连接，确保未连接的管路处于关闭状，并平放于透出液托盘上。
            \n6、废液端管路已卡进排废阀门中。
    </string>
    <string name="first_rinse_title">PDGO-NEXT小管家提示您：选择预冲模式 </string>
    <string name="first_rinse_title_auto">PDGO-NEXT系统正在进行管路自动预冲 </string>
    <string name="first_rinse_title_manual">PDGO-NEXT系统正在进行管路手动预冲 </string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_btn_view_data">查看数据</string>
    <string name="dialog_btn_suspend_treatment">长按暂停</string>
</resources>