<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/custom_attr_self_check_bg">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/custom_logo_width"
        android:layout_height="@dimen/custom_logo_height"
        android:layout_marginLeft="@dimen/custom_icon_margin"
        android:layout_marginTop="@dimen/custom_icon_margin"
        android:background="@drawable/logo" />

    <TextClock
        android:id="@+id/tc_time"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/navbar_height"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:format12Hour="yyyy 年 MM 月 dd 日 HH 时 mm 分"
        android:format24Hour="yyyy 年 MM 月 dd 日 HH 时 mm 分"
        android:gravity="center_vertical"
        android:textColor="#ffffff"
        android:textSize="@dimen/custom_main_title_size_2" />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:textSize="@dimen/custom_main_title_size_2"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="2023年 08 月 08 日 16 时 51 分"-->
<!--        android:layout_height="wrap_content" />-->
    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@+id/iv_logo">

        <LinearLayout
            android:id="@+id/layout_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_saomiao"
                android:layout_width="@dimen/custom_icon_saomiao_width"
                android:layout_height="@dimen/custom_icon_saomiao_height"
                android:background="@drawable/icon_saomiao"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_saomiao"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="10dp"
                android:text="正在通信中......"
                android:textColor="@color/white"
                android:textSize="@dimen/custom_main_title_size_2"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_center"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_main_progress_bar_height"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="35dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="?attr/custom_attr_self_check_progress_bg"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="正在检测动力系统..."
                    android:textColor="?attr/custom_attr_self_check_progress_text_color"
                    android:textSize="@dimen/custom_main_title_size_2" />

                <TextView
                    android:id="@+id/tv_mode_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0%"
                    android:textColor="?attr/custom_attr_self_check_progress_text_color"
                    android:textSize="@dimen/custom_main_title_size_2" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_report_include"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:visibility="gone">

        <include layout="@layout/layout_self_check_report" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_contact_engineer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:visibility="gone">

        <include layout="@layout/layout_self_check_contact_engineer" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/root_viewLL"
        android:layout_margin="@dimen/preparation_item_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/sn_name"
                android:id="@+id/snNane"
                android:textColor="@color/white"
                android:textSize="@dimen/custom_main_title_size_4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="腹膜透析机"
                android:gravity="center_vertical|left"
                android:textColor="@color/white"
                android:textSize="@dimen/custom_main_title_size_4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/software_release_version_2"
                android:textColor="@color/white"
                android:textSize="@dimen/custom_main_title_size_4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_version"
                android:id="@+id/versionName"
                android:textColor="@color/white"
                android:textSize="@dimen/custom_main_title_size_4"
                />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="@dimen/custom_main_title_size_4" />

    </LinearLayout>

    <include
        android:id="@+id/root_viewLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/root_view" />

</RelativeLayout>
