<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="@dimen/dialog_alarm_layout_width"
        android:layout_height="@dimen/dialog_alarm_layout_height"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background">

        <Button
            android:id="@+id/btn_view_data"
            android:layout_width="@dimen/dialog_alarm_btn_view_data_width"
            android:layout_height="@dimen/dialog_alarm_btn_view_data_height"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dialog_alarm_btn_view_data_margin"
            android:background="@drawable/dialog_btn_blue"
            android:gravity="center"
            android:text="@string/dialog_btn_view_data"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_alarm_btn_view_data_text_size"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dialog_alarm_iv_top_margin_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_top"
                android:layout_width="@dimen/power_monitor_iv_width"
                android:layout_height="@dimen/power_monitor_iv_height"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@drawable/icon_8_jinbao"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dialog_alarm_tv_title_margin_top"
                android:layout_toRightOf="@+id/iv_top"
                android:gravity="center_vertical"
                android:text="系统提醒"
                android:textColor="@color/text_warning"
                android:textSize="@dimen/power_monitor_tv_title_text_size"
                android:visibility="visible" />


        </RelativeLayout>


        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/power_monitor_tv_msg_margin_left_right"
            android:layout_marginRight="@dimen/power_monitor_tv_msg_margin_left_right"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.2"
            android:text="电源供电中断，设备即将关机。"
            android:textColor="@color/text_warning"
            android:textSize="@dimen/power_monitor_tv_msg_text_size" />

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_msg"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dialog_alarm_tv_countdown_margin_top"
            android:text=""
            android:textColor="?attr/custom_attr_common_text_color_2"
            android:textSize="@dimen/dialog_alarm_tv_countdown_text_size"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dialog_alarm_layout_btn_margin_left_right"
            android:layout_marginRight="@dimen/dialog_alarm_layout_btn_margin_left_right"
            android:layout_marginBottom="@dimen/power_monitor_btn_margin_bottom"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_first"
                android:layout_width="@dimen/dialog_alarm_btn_width"
                android:layout_height="@dimen/dialog_alarm_btn_height"
                android:layout_gravity="center"
                android:background="@drawable/dialog_btn_blue"
                android:gravity="center"
                android:text="关机(长按)"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_alarm_btn_text_size" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="@dimen/dialog_alarm_btn_width"
                android:layout_height="@dimen/dialog_alarm_btn_height"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dialog_alarm_btn_margin"
                android:layout_marginRight="@dimen/dialog_alarm_btn_margin"
                android:background="@drawable/dialog_btn_yellow"
                android:gravity="center"
                android:text="@string/dialog_btn_suspend_treatment"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_alarm_btn_text_size"
                android:visibility="gone" />


            <Button
                android:id="@+id/btn_three"
                android:layout_width="@dimen/dialog_alarm_btn_width"
                android:layout_height="@dimen/dialog_alarm_btn_height"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dialog_alarm_btn_margin"
                android:background="@drawable/dialog_btn_green"
                android:gravity="center"
                android:text="@string/dialog_btn_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_alarm_btn_text_size"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>